tests/ui/parser/issues/issue-68092-unicode-ident-after-incomplete-expr.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ*
    };
}

fn main() {
    x!(!); //~ ERROR macro expansion ends with an incomplete expression: expected expression
}
